--- a/app/index.html
+++ b/app/index.html
@@ -3,13 +3,14 @@
 <head>
 <title>Calendar Directive Challenge</title>
 <link rel="stylesheet" type="text/css" href="./main.css" />
-</head>
-<body>
-
-<!-- your code for nav and calendar directive instance here -->
 
 <script type="text/javascript" src="./bower_components/angular/angular.js"></script>
 <script type="text/javascript" src="./utilities/calendar-range/calendarRange.js"></script>
 <script type="text/javascript" src="./app.js"></script>
+<script type="text/javascript" src="./constants.js"></script>
+<script type="text/javascript" src="./calendarDir.js"></script>
+</head>
+<body>
+<calendar start-year="2000" end-year="2050"></calendar>
 </body>
 </html>
